--- a/caida.html
+++ b/caida.html
@@ -68,7 +68,7 @@
           For the Summer of 2018, I served as a UX Developer for a web 
           platform called QUINCE, an abbreviation for the lengthy title: Quality 
           of Internet Consumer Experience. This platform enables end-users to 
-          easily participate in various internet measurement tasks. Participants can,
+          easily participate in various Internet measurement tasks. Participants can,
           in turn, accumulate virtual points and redeem them for rewards in the form
           of currency.
         </p>
