--- a/extras.html
+++ b/extras.html
@@ -54,14 +54,15 @@
     <div class="banner-info">
       <div id="valign-div">
         <p id="work-title">Extras</p>
-        <p id="extras-blurb" class="spacer-5">A collection of my personal design and development projects.</p>
-        <p id="work-blurb" class="hidden spacer-6">A collection of my personal design and development projects.</p>
+        <p id="extras-blurb" class="spacer-5">A collection of my design + development projects.</p>
+        <p id="work-blurb" class="hidden spacer-6">A collection of my design + development projects.</p>
       </div>
     </div>
   </div>
 
   <main id="content-margins">
     <h2 id="extras-header" class="spacer-2">Day Trip Icons</h2>
+    <p id="work-blurb" class="hidden spacer-1">Iconography</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
@@ -85,6 +86,7 @@
     </div>
 
     <h2 id="extras-header" class="spacer-2">Dropbox Parallax</h2>
+    <p id="work-blurb" class="hidden spacer-1">Parallax Scrolling</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
@@ -108,6 +110,7 @@
     </div>
 
     <h2 id="extras-header" class="spacer-2">Smile</h2>
+    <p id="work-blurb" class="hidden spacer-1">Line Animation</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
@@ -125,13 +128,14 @@
             CSS <br/>
             Adobe Illustrator <br/>
             SVG <br/>
-            Line animation
+            Line Animation
           </p>
         </div>
       </div>
     </div>
 
     <h2 id="extras-header" class="spacer-2">Rocket Countdown</h2>
+    <p id="work-blurb" class="hidden spacer-1">Color Theory</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
@@ -157,6 +161,7 @@
     </div>
 
     <h2 id="extras-header" class="spacer-2">My Money</h2>
+    <p id="work-blurb" class="hidden spacer-1">Python: Finance Tracking</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
@@ -177,8 +182,8 @@
           <h3>Tools + Skills</h3>
           <p>
             Python <br/>
-            Python Libraries <br/>
             Microsoft Excel <br/>
+            Delimited Text Files (.csv) <br/>
             Data Cleaning <br/>
             Finance Tracking
           </p>
@@ -187,6 +192,7 @@
     </div>
 
     <h2 id="extras-header" class="spacer-2">Quickly Web App</h2>
+    <p id="work-blurb" class="hidden spacer-1">Python: Data Cleaning + Parsing</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-6">
       <div id="left-col">
@@ -203,10 +209,10 @@
             HTML <br/>
             CSS <br/>
             Python <br/>
-            Python Libraries <br/>
             Microsoft Excel <br/>
-            Data Cleaning <br/>
-            Calendar File (ics)
+            Delimited Text Files (.csv) <br/>
+            Calendar Files (.ics) <br/>
+            Data Cleaning
           </p>
         </div>
       </div>
