--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/extras">Extras</a>
-          <p id="summary">A collection of my personal design and development projects.</p>
+          <p id="summary">A collection of my design + development projects.</p>
           <p id="year">2018 - PRESENT</p>
         </div>
       </div>
