--- a/zilter.html
+++ b/zilter.html
@@ -67,21 +67,18 @@
         <p class="spacer-1">
           The goal of this course was to focus on 
           hands-on practice with a modern human-centered design process while 
-          building a web application to serve a set of target users. This 
-          project aims to enhance recreational activity.
-        </p>
-        <p class="spacer-1">
-          The way we materialized this goal was via 
-          Zilter, a web application concept that eases the shopping experience 
-          by consolidating all product research into one convenient place.
+          building a web application to serve a set of target users. The theme 
+          was to enhance recreational activity.
         </p>
         <p class="spacer-3">
-          Online shopping for gadgets and appliances 
-          (e.g. TVs, laptops, headphones) can be a tedious task given that you 
-          need to acquire information to get the best product at the best price. 
-          Specifically, Zilter provides standard product information, photos, 
-          videos and official reviews gathered from websites. The sources are 
-          cited in a bibliography.
+          We materialized this goal via Zilter, a web application concept that 
+          eases the shopping experience by consolidating all product research 
+          into one convenient place. We chose to address the problems of online 
+          shopping because it can be a tedious task given that you will want to 
+          acquire certain information to get the best product at the best price. 
+          Specifically, Zilter provides standard product information, accurate 
+          photos and videos, and official reviews pulled from external websites. 
+          All sources are consolidated in a bibliography.
         </p>
 
         <h2 id="body-header" class="spacer-2">Responsibility</h2>
@@ -115,10 +112,10 @@
         <div class="four-six-container spacer-3">
           <p class="second">
             While observing Kevin, I noticed that he needed a way to figure out 
-            if a product’s physical dimensions were right for him. Here, he uses 
-            the width of a paper to truly understand the diameter of a strainer. 
-            Although measurements were provided to him, he needed a way to compare 
-            it relative to himself. To us, this was a design opportunity to improve 
+            if a product’s dimensions suited him. Here, he uses the width of a p
+            aper to truly understand the diameter of a strainer. Although 
+            measurements were provided, he needed a way to compare it relative 
+            to himself. To us, this was a design opportunity to improve 
             product expectations.
           </p>
           <img src="assets/zilter/kevin.jpg" class="first">
