Fix resume link

--- a/404.html
+++ b/404.html
@@ -59,12 +59,12 @@
     <div id="color-block"></div>
     <div id="working-graphic"></div>
     
-    <section id="description-2">
+    <section>
       <div id="contact">
         <ul>
           <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')" onclick="copy('email', 'andrewjzhen@gmail.com')">+ Email</a></li>
 
-          <li><a href="assets/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
+          <li><a href="assets/files/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
           <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
 
