--- a/about.html
+++ b/about.html
@@ -63,10 +63,11 @@
         <div class="aboutSpacing">
           <p class="aboutTxt">I'm a 4th year undergraduate studying 
             Design & Interaction at UC San Diego. I'm a web designer + 
-            developer at <a href="https://asgraphicstudio.ucsd.edu/" id="asgs">A.S. Graphic Studio</a> and a web developer for 
-            <a href="http://www.ucsddesign.co" id="dco">Design Co</a> and I 
-            collaborate with student brand and visual designers to implement 
-            designs and prototypes.
+            developer at <a href="https://asgraphicstudio.ucsd.edu/" id="asgs">
+            A.S. Graphic Studio</a> and a web developer for 
+            <a href="http://www.ucsddesign.co" id="dco">Design Co</a>, where I 
+            collaborate with brand and visual designers to implement graphics 
+            and high-fidelity prototypes.
           </p>
         </div>
       </section>
@@ -95,7 +96,7 @@
         <ul>
           <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')" onclick="copy('email', 'andrewjzhen@gmail.com')">+ Email</a></li>
 
-          <li><a href="assets/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
+          <li><a href="assets/files/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
           <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
 
