--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 </head>
 
 <body id="body">
-	<main class="default-top">
+	<div class="head-container">
 		<nav id="header">
     	<div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
     	<div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
@@ -49,10 +49,12 @@
         	</label>
       	</div>
     	</div>
-  	</nav>
+    </nav>
+  </div>
 
+  <main id="content-margins">
     <div id="description-div">
-      <p id="description-2" class="spacer-4">Sorry, this page doesn't exist.</p>
+      <p id="description-2">Sorry, this page doesn't exist.</p>
     </div>
     
     <div id="white-block"></div>
@@ -66,19 +68,19 @@
 
           <li><a href="assets/files/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
-          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/andrew-zhen" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
 
           <li><a href="https://github.com/andrewzhen" id="github" onmouseover="contactChange('github', 'github.com/andrewzhen')" onmouseleave="contactChange('github', '+ GitHub')">+ GitHub</a></li>
         </ul>
       </div>
     </section>
-
-    <footer id="footer">
-      <p id="note">Created by Andrew Zhen</p>
-      <p id="copyright">© 2020 San Diego</p>
-      <div style="clear: both"></div>
-    </footer>
-	</main>
+  </main>
+  
+  <footer id="footer">
+    <p id="note">Created by Andrew Zhen</p>
+    <p id="copyright">© 2020 San Diego</p>
+    <div style="clear: both"></div>
+  </footer>
 
 	<script src="script/script.js" type="text/javascript"></script>
 </body>
