--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 </head>
 
 <body id="body">
-  <main class="default-top">
+  <div class="head-container">
     <nav id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
@@ -49,7 +49,9 @@
         </div>
       </div>
     </nav>
+  </div>
 
+  <main id="content-margins">
     <div class="aboutPic"><img src="assets/images/portrait.jpg"></div>
 
     <article class="aboutContainer">
@@ -75,8 +77,8 @@
       <section>
         <div class="aboutSpacing">
           <p class="aboutTxt">I've had the opportunities to work under 
-            <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s IT
-            services department</a> as a web developer in migrating websites and 
+            <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s ITS 
+            department</a> as a web developer in migrating websites and 
             improving content architecture and usability and also as a UX developer 
             at <a href="http://www.caida.org/home/" id="caida">The Center for 
             Applied Internet Data Analysis</a>.
@@ -98,19 +100,19 @@
 
           <li><a href="assets/files/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
-          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/andrew-zhen" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
 
           <li><a href="https://github.com/andrewzhen" id="github" onmouseover="contactChange('github', 'github.com/andrewzhen')" onmouseleave="contactChange('github', '+ GitHub')">+ GitHub</a></li>
         </ul>
       </div>
     </section>
-
-    <footer id="footer">
-      <p id="note">Created by Andrew Zhen</p>
-      <p id="copyright">© 2020 San Diego</p>
-      <div style="clear: both"></div>
-    </footer>
   </main>
+
+  <footer id="footer">
+    <p id="note">Created by Andrew Zhen</p>
+    <p id="copyright">© 2020 San Diego</p>
+    <div style="clear: both"></div>
+  </footer>
 
   <script src="script/script.js" type="text/javascript"></script>
 </body>
