add photo portfolio

--- a/other.html
+++ b/other.html
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="1024">
 
   <!-- Title & Favicon -->
-  <title>Extras : Andrew Zhen</title>
+  <title>Other Projects : Andrew Zhen</title>
   <link rel="icon" type="image/png" href="assets/images/logo.png"/>
   <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 
@@ -53,9 +53,9 @@
     <div id="extras-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <p id="work-title">Extras</p>
-        <p id="extras-blurb" class="spacer-5">A collection of my design + development projects.</p>
-        <p id="work-blurb" class="hidden spacer-6">A collection of my design + development projects.</p>
+        <p id="work-title">Other Design + Dev Projects</p>
+        <p id="extras-blurb" class="spacer-5">A collection of web apps and web pages I've built along with illustrations I've made.</p>
+        <p id="work-blurb" class="hidden spacer-6">A collection of web apps and web pages I've built along with illustrations I've made.</p>
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/camera-gear.jpg">
+        <img src="assets/other/camera-gear.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -90,7 +90,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/dropbox-parallax.gif">
+        <img src="assets/other/dropbox-parallax.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -114,7 +114,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/smile.gif">
+        <img src="assets/other/smile.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -139,7 +139,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/rocket.gif">
+        <img src="assets/other/rocket.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -165,7 +165,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/mymoney.jpg">
+        <img src="assets/other/mymoney.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -194,14 +194,20 @@
     <h2 id="extras-header" class="spacer-2">Quickly Web App</h2>
     <p id="work-blurb" class="hidden spacer-1">Python: Data Cleaning + Parsing</p>
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
-    <div class="body-container spacer-6">
+    <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/extras/quickly.jpg">
+        <img src="assets/other/quickly.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
           <h3 class="margin-top-none">Date</h3>
           <p>Mar 2018</p>
+        </div>
+        <div class="info-header">
+          <h3>Resources</h3>
+          <p>
+            Under NDA
+          </p>
         </div>
         <div class="info-header">
           <h3>Tools + Skills</h3>
