--- a/photography.html
+++ b/photography.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Andrew Zhen design and development portfolio">
-  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript, Design Co">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
   <meta name="author" content="Andrew Zhen">
   <meta property="og:image" content="assets/images/thumbnail.png">
   <meta property="og:image:type" content="image/jpg">
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="1024">
 
   <!-- Title & Favicon -->
-  <title>Design Co : Andrew Zhen</title>
+  <title>Photography Portfolio : Andrew Zhen</title>
   <link rel="icon" type="image/png" href="assets/images/logo.png"/>
   <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 
@@ -36,7 +36,7 @@
 
 <body id="body">
   <div class="head-container">
-    <nav id="header">
+    <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
 
@@ -48,14 +48,16 @@
           </label>
         </div>
       </div>
-    </nav>
+    </div>
 
-    <div id="designco-banner" class="banner spacer-4"></div>
+    <div id="photography-banner" class="banner spacer-4"></div>
     <div class="banner-info">
-      <div id="valign-div">
-        <p id="work-title" class="spacer-4">Design Co</p>
-        <p id="work-blurb" class="hidden spacer-1">Web Development</p>
-        <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
+      <div class="banner-info">
+        <div id="valign-div">
+          <p id="work-title" class="spacer-4">Photography Portfolio</p>
+          <p id="work-blurb" class="hidden spacer-1">Web Design + Development</p>
+          <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
+        </div>
       </div>
     </div>
   </div>
@@ -65,26 +67,15 @@
       <div id="left-col">
         <h2 id="body-header" class="spacer-2">Description</h2>
         <p class="spacer-3">
-          Design Co is a student-run, pre-professional design organization 
-          at UC San Diego. Our goal is to educate the community on design 
-          and help prepare them for industry work. We plan and organize 
-          weekly events that include talks, information sessions and 
-          workshops and we consistently see a turnout of between 50 and a 
-          100 people. At our events, students form lasting connections with 
-          each other and are increasingly interested in attending. Our 
-          website allows the community to stay informed of these upcoming 
-          events and so it is imporant that content remain up to date 
-          and accessible.
+          I began this project in 2017 to document my digital photography and 
+          to provide clients a resource to reference my work and get connected.
         </p>
-
+        
         <h2 id="body-header" class="spacer-2">Responsibility</h2>
         <p class="spacer-2">
-          My role as web developer is directly responsible for delivering 
-          content to Design Co’s website. I collaborate with brand and visual 
-          designers to integrate graphics and high-fidelity design prototypes 
-          onto our online presence and related event pages such as Stride, 
-          our design-centric career fair, and Design Frontiers, our day-long 
-          design sprint.
+          I continuously update and improve this website to practice my 
+          front-end development skills and to give visitors a more pleasant user 
+          exeperience. 
         </p>
 
         <p>
@@ -95,30 +86,30 @@
       <div id="right-col" class="details">
         <div class="info-header" style="margin-top: 0">
           <h3>Date</h3>
-          <p>Jun 2019 - Present</p>
+          <p>Sep 2017 - Present</p>
         </div>
         <div class="info-header">
-          <h3>Role</h3>
-          <p>Web Developer</p>
-          <p>Unoffical photographer</p>
+          <h3>Scope</h3>
+          <p>Web Design</p>
+          <p>Web Development</p>
         </div>
         <div class="info-header">
           <h3>Resources</h3>
           <p>
-            <a id="link" href="http://www.ucsddesign.co/">Website</a> <br>
-            <a id="link" href="https://github.com/ucsddesignco">GitHub Repository</a>
+            <a id="link" href="http://ajzhen.herokuapp.com">Website</a>
           </p>
         </div>
         <div class="info-header">
           <h3>Tools + Skills</h3>
           <p>
-            HTML <br>
-            CSS <br>
-            Sass <br>
-            JavaScript <br>
-            React <br>
-            Git <br>
-            Front-End Dev</p>
+            HTML <br/>
+            CSS <br/>
+            JavaScript <br/>
+            Adobe Lightroom <br/>
+            Adobe Photoshop <br/>
+            Parallax Scrolling <br/>
+            Digital Photography
+          </p>
         </div>
       </div>
     </div>
