--- a/index.html
+++ b/index.html
@@ -83,6 +83,39 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
+          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
+          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="year">SUMMER 2018</p>
+        </div>
+        <div id="work-img" class="grid-item grid-item-right">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="grid-container-right">
+        <div class="grid-item">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/photography">
+              <img src="assets/photography/thumbnail.png" alt="Photography portfolio thumbnail" title="Photography Portfolio">
+            </a>
+          </div>
+        </div>
+        <div>
+          <a id="title" href="https://ajzhen.com/photography">Photography Portfolio</a>
+          <p id="summary">Design and development of a static web page featuring my digital photography work, hosted on heroku.</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="grid-container-left">
+        <div id="work-des">
           <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
           <p id="year">SUMMER 2018</p>
@@ -101,15 +134,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
+            <a href="https://ajzhen.com/zilter">
+              <img src="assets/zilter/thumbnail.jpg" alt="Zilter project thumbnail" title="Zilter">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
-          <p id="year">SUMMER 2018</p>
+          <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
+          <p id="summary">Design and development of an online shopping concept featuring research presented conveniently for you.</p>
+          <p id="year">WINTER 2018</p>
         </div>
       </div>
     </section>
@@ -117,33 +150,15 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
-          <p id="summary">Design and development of an online shopping concept featuring research presented conveniently for you.</p>
-          <p id="year">WINTER 2018</p>
+          <a id="title" href="https://ajzhen.com/other">Other Design + Dev Projects</a>
+          <p id="summary">A collection of web apps and web pages I've built along with illustrations I've made.</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/zilter">
-              <img src="assets/zilter/thumbnail.jpg" alt="Zilter project thumbnail" title="Zilter">
+            <a href="https://ajzhen.com/other">
+              <img src="assets/other/camera-gear.jpg" alt="Other projects thumbnail" title="Other Projects">
             </a>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="grid-container-right">
-        <div class="grid-item">
-          <div class="grid-content">
-            <a href="https://ajzhen.com/extras">
-              <img src="assets/extras/thumbnail.gif" alt="Other projects thumbnail" title="Extras">
-            </a>
-          </div>
-        </div>
-        <div>
-          <a id="title" href="https://ajzhen.com/extras">Extras</a>
-          <p id="summary">A collection of my design + development projects.</p>
-          <p id="year">2018 - PRESENT</p>
         </div>
       </div>
     </section>
