--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Metadata -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="description" content="Andrew Zhen development and design portfolio">
   <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
   <meta name="author" content="Andrew Zhen">
   <meta property="og:image" content="assets/images/thumbnail.png">
@@ -67,15 +67,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/designco">
-              <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/designco">Design Co</a>
-          <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
-          <p id="year">SPRING 2019</p>
+          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
+          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="year">SUMMER 2018</p>
         </div>
       </div>
     </section>
@@ -83,14 +83,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
-          <p id="year">SUMMER 2018</p>
+          <a id="title" href="https://ajzhen.com/photography">Photography Portfolio</a>
+          <p id="summary">Design and development of a static web page featuring my digital photography work, hosted on heroku.</p>
+          <p id="year">FALL 2017</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
+            <a href="https://ajzhen.com/photography">
+              <img src="assets/photography/thumbnail.png" alt="Photography portfolio thumbnail" title="Photography Portfolio">
             </a>
           </div>
         </div>
@@ -101,14 +101,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/photography">
-              <img src="assets/photography/thumbnail.png" alt="Photography portfolio thumbnail" title="Photography Portfolio">
+            <a href="https://ajzhen.com/designco">
+              <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/photography">Photography Portfolio</a>
-          <p id="summary">Design and development of a static web page featuring my digital photography work, hosted on heroku.</p>
+          <a id="title" href="https://ajzhen.com/designco">Design Co</a>
+          <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
+          <p id="year">SPRING 2019</p>
         </div>
       </div>
     </section>
@@ -150,13 +151,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/other">Other Design + Dev Projects</a>
+          <a id="title" href="https://ajzhen.com/more">More Dev + Design Projects</a>
           <p id="summary">A collection of web apps and web pages I've built along with illustrations I've made.</p>
+          <p id="year">ONGOING</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/other">
-              <img src="assets/other/camera-gear.jpg" alt="Other projects thumbnail" title="Other Projects">
+            <a href="https://ajzhen.com/more">
+              <img src="assets/more/camera-gear.jpg" alt="More projects thumbnail" title="More Projects">
             </a>
           </div>
         </div>
