--- a/other.html
+++ b/other.html
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="1024">
 
   <!-- Title & Favicon -->
-  <title>Other Projects : Andrew Zhen</title>
+  <title>More Projects : Andrew Zhen</title>
   <link rel="icon" type="image/png" href="assets/images/logo.png"/>
   <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 
@@ -53,7 +53,7 @@
     <div id="extras-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <p id="work-title">Other Design + Dev Projects</p>
+        <p id="work-title">More Dev + Design Projects</p>
         <p id="extras-blurb" class="spacer-5">A collection of web apps and web pages I've built along with illustrations I've made.</p>
         <p id="work-blurb" class="hidden spacer-6">A collection of web apps and web pages I've built along with illustrations I've made.</p>
       </div>
@@ -66,7 +66,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/camera-gear.jpg">
+        <img src="assets/more/camera-gear.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -90,7 +90,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/dropbox-parallax.gif">
+        <img src="assets/more/dropbox-parallax.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -114,7 +114,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/smile.gif">
+        <img src="assets/more/smile.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -139,7 +139,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/rocket.gif">
+        <img src="assets/more/rocket.gif">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -165,7 +165,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/mymoney.jpg">
+        <img src="assets/more/mymoney.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
@@ -196,7 +196,7 @@
     <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
     <div class="body-container spacer-5">
       <div id="left-col">
-        <img src="assets/other/quickly.jpg">
+        <img src="assets/more/quickly.jpg">
       </div>
       <div id="right-col" class="details">
         <div class="info-header margin-top-none">
