--- a/about.html
+++ b/about.html
@@ -63,12 +63,12 @@
       
       <section>
         <div class="aboutSpacing">
-          <p class="aboutTxt">I'm a 4th year undergraduate studying 
-            Design & Interaction at UC San Diego. I'm a web designer + 
+          <p class="aboutTxt">I'm a 4th year UC San Diego undergraduate 
+            studying Design & Interaction. I'm a web designer + 
             developer at <a href="https://asgraphicstudio.ucsd.edu/" id="asgs">
             A.S. Graphic Studio</a> and a web developer for 
             <a href="http://www.ucsddesign.co" id="dco">Design Co</a>, where I 
-            collaborate with brand and visual designers to implement graphics 
+            collaborate with UX and visual designers to implement graphics 
             and high-fidelity prototypes.
           </p>
         </div>
