--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main id="content-margins">
     <div id="description-div">
       <p id="description" class="spacer-3">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2" class="spacer-6">He's a UX engineer currently at A.S. Graphic Studio and helping lead UCSD’s largest design community.</p>
+      <p id="description-2" class="spacer-6">He's a UX engineer, currently at A.S. Graphic Studio and helping lead UCSD’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
