fix fade animation, update resume)

--- a/designco.html
+++ b/designco.html
@@ -69,7 +69,7 @@
           at UC San Diego. Our goal is to educate the community on design 
           and help prepare them for industry work. We plan and organize 
           weekly events that include talks, information sessions and 
-          workshops and we consistently see a turnout of between 50 and a 
+          workshops and we consistently see a turnout of between 50 and 
           100 people. At our events, students form lasting connections with 
           each other and are increasingly interested in attending. Our 
           website allows the community to stay informed of these upcoming 
