--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
+          <a id="title" href="https://ajzhen.com/snaash">GrandAMA iOS App</a>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
           <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg" alt="Snaash project thumbnail" title="Snaash">
+              <img src="assets/snaash/thumbnail.jpg" alt="GrandAMA project thumbnail" title="GrandAMA">
             </a>
           </div>
         </div>
