--- a/snaash.html
+++ b/snaash.html
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="1024">
 
   <!-- Title & Favicon -->
-  <title>Snaash iOS App : Andrew Zhen</title>
+  <title>GrandAMA iOS App : Andrew Zhen</title>
   <link rel="icon" type="image/png" href="assets/images/logo.png"/>
   <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 
@@ -53,7 +53,7 @@
     <div id="snaash-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <p id="work-title" class="spacer-4">Snaash iOS App</p>
+        <p id="work-title" class="spacer-4">GrandAMA iOS App</p>
         <p id="work-blurb" class="hidden spacer-1">UX Design</p>
         <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
       </div>
@@ -64,27 +64,16 @@
     <div class="body-container spacer-6">
       <div id="left-col">
         <h2 id="body-header" class="spacer-2">Description</h2>
+        <p class="spacer-1">Grandma + (A)sk (M)e (A)nything = GrandAMA</p>
         <p class="spacer-2">
-          For a 5 week, web design course, our UX team was tasked with 
+          This project was created from a 5 week course focused on 
           designing and prototyping an accessible web application to accomodate 
-          the lifestyles of people ages 50 and up. Our idea-turned product 
-          participated in an episode of Shark Tank, an entrepreneur-themed 
-          competition, with 11 other teams and “sharks” in the form of senior 
-          stakeholders judging the presentations. The result? 
+          the lifestyles of people ages 50 and up. GrandAMA bridges the gap 
+          between generations. The elderly can share advice with those who 
+          need it and the youth can ask for guidance. Through this app, users 
+          are able to post a question and receive a thoughtful voice response 
+          from someone who may have experienced it before.
         </p>
-
-        <div class="four-six-container spacer-3">
-          <img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 65%" class="drop-shadow-half">
-          <p>
-            <i>
-              “SNAASH is bridging the gap between generations. The elderly can 
-              share advice with those who need it and the young ones can ask for 
-              guidance. Through their app, you’re able to post a question and 
-              receive a thoughtful voice response from someone who may have 
-              experienced it before.”
-            </i>
-          </p>
-        </div>
 
         <h2 id="body-header" class="spacer-2">Responsibility</h2>
         <p class="spacer-3">
@@ -195,7 +184,7 @@
           There already exists a few options for places that provide advice. Our most 
           notable competitors include Quora, Reddit, and Yahoo Answers. Taking 
           a closer look at the competition, we singled each one out and 
-          summarized Snaash’s advantages over them:
+          summarized GrandAMA's advantages over them:
         </p>
 
         <img src="assets/snaash/quora.png" class="logo-width spacer-1">
@@ -228,7 +217,7 @@
           available to anyone. On Snaash, we want to keep the confidentiality 
           of users who post questions seeking advice. Reddit also allows users 
           to pay, or "give gold", to another user to unlock features. Ideally, 
-          we would want Snaash to be completely free to use and ad-free.
+          we would want GrandAMA to be completely free to use and ad-free.
         </p>
         <p class="spacer-1">
           Notable Features:
@@ -270,10 +259,10 @@
           </ul>
         </p>
 
-        <img src="assets/snaash/snaash.png" class="logo-width spacer-1">
+        <img src="assets/snaash/grandama.png" class="logo-width spacer-1">
         <p class="spacer-1">
-          Snaash allows users to ask questions to a qualified group of elders 
-          without having their profie revealed. Snaash borrows a feature from 
+          GrandAMA allows users to ask questions to a qualified group of elders 
+          without having their profie revealed. GrandAMA borrows a feature from 
           other competitors: a voting system where the best answers can be 
           viewed at a glance. However, what sets us apart is the web app’s 
           consideration towards the answerers. To accomodate an older 
@@ -297,18 +286,6 @@
 
         <img src="assets/snaash/competitive-analysis.jpg" class="drop-shadow-full spacer-3">
 
-        <h4 class="subheader spacer-1 mobile-hidden">Final Prototypes</h4>
-        <div class="prototype-container spacer-3 mobile-hidden">
-          <div>
-            <iframe class="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
-            <p style="text-align: center">Answerer UI (Ages 50+)</p>
-          </div>
-          <div>
-            <iframe class="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
-            <p style="text-align: center">Asker UI (All ages)</p>
-          </div>
-        </div>
-
         <h2 id="body-header" class="spacer-2">Conclusion + Takeaways</h2>
         <p class="spacer-1">
           Keeping in touch with friends and family is one of the keys to a 
@@ -319,7 +296,7 @@
         <p>
           Our web application helps these two demographic groups with their 
           respective needs. By bringing together the wisdom of elders with 
-          the eagerness of the youth, Snaash creates a mutual relationship 
+          the eagerness of the youth, GrandAMA creates a mutual relationship 
           between altruistic users intent on giving back to one another.
         </p>
       </div>
